force-app/main/default/objects/animalos__Animal_Referral__c/animalos__Animal_Referral__c.object-meta.xml
<CustomObject>
    <label>Animal Referral</label>
    <nameField>
        <displayFormat>AR{00000}</displayFormat>
        <label>Animal Referral ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Referrals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>