force-app/main/default/objects/animalos__Animal_Referral__c/fields/animalos__Block__c.field-meta.xml
<CustomField>
    <fullName>animalos__Block__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Block</label>
    <referenceTo>animalos__Location__c</referenceTo>
    <relationshipName>Block_Animal_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>