force-app/main/default/objects/animalos__Animal_Referral__c/fields/animalos__Referral__c.field-meta.xml
<CustomField>
    <fullName>animalos__Referral__c</fullName>
    <label>Referral</label>
    <referenceTo>animalos__Referral__c</referenceTo>
    <relationshipLabel>Animal Referrals</relationshipLabel>
    <relationshipName>Animal_Referrals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>