force-app/main/default/objects/animalos__Animal_Referral__c/fields/animalos__Site__c.field-meta.xml
<CustomField>
    <fullName>animalos__Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>animalos__Location__c</referenceTo>
    <relationshipName>Site_Animal_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>