force-app/main/default/objects/animalos__Animal_Referral__c/fields/animalos__Unit__c.field-meta.xml
<CustomField>
    <fullName>animalos__Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>animalos__Location__c</referenceTo>
    <relationshipName>Unit_Animal_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>