force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Animal_Name__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Name__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <formula>animalos__Animal__r.animalos__Animal_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal Name</label>
    <type>Text</type>
</CustomField>