force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Bitten_or_Scratched_Someone__c.field-meta.xml
<CustomField>
    <fullName>aos_Bitten_or_Scratched_Someone__c</fullName>
    <label>Bitten or Scratched Someone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>