force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Breed_and_Property_Details__c.field-meta.xml
<CustomField>
    <fullName>aos_Breed_and_Property_Details__c</fullName>
    <label>Breed and Property Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>