force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Comments__c.field-meta.xml
<CustomField>
    <fullName>aos_Comments__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>