force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Conjunctivitis__c.field-meta.xml
<CustomField>
    <fullName>aos_Conjunctivitis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conjunctivitis</label>
    <type>Checkbox</type>
</CustomField>