force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Current_Animal_Status__c.field-meta.xml
<CustomField>
    <fullName>aos_Current_Animal_Status__c</fullName>
    <formula>TEXT(animalos__Animal__r.animalos__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Animal Status</label>
    <type>Text</type>
</CustomField>