force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Cystitis__c.field-meta.xml
<CustomField>
    <fullName>aos_Cystitis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cystitis</label>
    <type>Checkbox</type>
</CustomField>