force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Days_in_Care__c.field-meta.xml
<CustomField>
    <fullName>aos_Days_in_Care__c</fullName>
    <label>Days in Care</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>