force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Dead__c.field-meta.xml
<CustomField>
    <fullName>aos_Dead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dead</label>
    <type>Checkbox</type>
</CustomField>