force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Describe_Threat__c.field-meta.xml
<CustomField>
    <fullName>aos_Describe_Threat__c</fullName>
    <label>Describe Threat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>