force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Dog_Attack__c.field-meta.xml
<CustomField>
    <fullName>aos_Dog_Attack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dog Attack</label>
    <type>Checkbox</type>
</CustomField>