force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Fall__c.field-meta.xml
<CustomField>
    <fullName>aos_Fall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fall</label>
    <type>Checkbox</type>
</CustomField>