force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Food_Given_Details__c.field-meta.xml
<CustomField>
    <fullName>aos_Food_Given_Details__c</fullName>
    <inlineHelpText>Provide times. See diet charts.</inlineHelpText>
    <label>Food Given Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>