force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Gender__c.field-meta.xml
<CustomField>
    <fullName>aos_Gender__c</fullName>
    <formula>TEXT(animalos__Animal__r.animalos__Gender__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gender</label>
    <type>Text</type>
</CustomField>