force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_ID_Microchip_Checked__c.field-meta.xml
<CustomField>
    <fullName>aos_ID_Microchip_Checked__c</fullName>
    <label>ID Microchip Checked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>