force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_If_Female_is_young__c.field-meta.xml
<CustomField>
    <fullName>aos_If_Female_is_young__c</fullName>
    <label>If Female is young</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Present</fullName>
            </value>
            <value>
                <fullName>Absent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>