force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Induction_Drug__c.field-meta.xml
<CustomField>
    <fullName>aos_Induction_Drug__c</fullName>
    <label>Induction Drug</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IM</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>Mask</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>