force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Induction_Drug_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>aos_Induction_Drug_Date_Time__c</fullName>
    <label>Induction Drug Date/Time</label>
    <type>DateTime</type>
</CustomField>