force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Injured__c.field-meta.xml
<CustomField>
    <fullName>aos_Injured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Injured</label>
    <type>Checkbox</type>
</CustomField>