force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Injury_Condition_Found__c.field-meta.xml
<CustomField>
    <fullName>aos_Injury_Condition_Found__c</fullName>
    <label>Injury/Condition Found</label>
    <length>255</length>
    <type>Text</type>
</CustomField>