force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Job_Number_Validated__c.field-meta.xml
<CustomField>
    <fullName>aos_Job_Number_Validated__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>Job Number Validated</label>
    <type>Checkbox</type>
</CustomField>