force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Microchip_Number__c.field-meta.xml
<CustomField>
    <fullName>aos_Microchip_Number__c</fullName>
    <formula>animalos__Animal__r.animalos__Microchip_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Microchip Number</label>
    <type>Text</type>
</CustomField>