force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Orphaned__c.field-meta.xml
<CustomField>
    <fullName>aos_Orphaned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orphaned</label>
    <type>Checkbox</type>
</CustomField>