force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Other__c.field-meta.xml
<CustomField>
    <fullName>aos_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other</label>
    <type>Checkbox</type>
</CustomField>