force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Other_Details__c.field-meta.xml
<CustomField>
    <fullName>aos_Other_Details__c</fullName>
    <label>Other Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>