force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Primary_Breed__c.field-meta.xml
<CustomField>
    <fullName>aos_Primary_Breed__c</fullName>
    <formula>animalos__Animal__r.animalos__Primary_Breed__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Breed</label>
    <type>Text</type>
</CustomField>