force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Referral_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_Referral_Record_Type__c</fullName>
    <formula>animalos__Referral__r.aos_Record_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Record Type</label>
    <type>Text</type>
</CustomField>