force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Scheduled_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>aos_Scheduled_Date_Time__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <formula>animalos__Referral__r.animalos__Scheduled_Date_Time__c</formula>
    <label>Scheduled Date/ Time</label>
    <type>DateTime</type>
</CustomField>