force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Sick__c.field-meta.xml
<CustomField>
    <fullName>aos_Sick__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sick</label>
    <type>Checkbox</type>
</CustomField>