force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Speed_Limit_on_Road__c.field-meta.xml
<CustomField>
    <fullName>aos_Speed_Limit_on_Road__c</fullName>
    <label>Speed Limit on Road</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>