force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Survey_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>aos_Survey_Completed_By__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>aos_Animal_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>