force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Survey_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>aos_Survey_Follow_Up_Date__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Survey Follow Up Date</label>
    <type>Date</type>
</CustomField>