force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>aos_Survey_Status__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Survey Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No further action required</fullName>
            </value>
            <value>
                <fullName>Referred to BRT for support</fullName>
            </value>
            <value>
                <fullName>Referred to Vet for support</fullName>
            </value>
            <value>
                <fullName>Required Follow-up in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>