force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Treatment_Details__c.field-meta.xml
<CustomField>
    <fullName>aos_Treatment_Details__c</fullName>
    <inlineHelpText>Especially fluids, followed by pain relief (see treatment charts).</inlineHelpText>
    <label>Treatment Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>