force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Treatments_Given__c.field-meta.xml
<CustomField>
    <fullName>aos_Treatments_Given__c</fullName>
    <label>Treatments Given</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>