force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>animalos__Animal_Type</valueSetName>
    </valueSet>
</CustomField>