force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Unable_to_Scan__c.field-meta.xml
<CustomField>
    <fullName>aos_Unable_to_Scan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unable to Scan</label>
    <type>Checkbox</type>
</CustomField>