force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Under_Threat__c.field-meta.xml
<CustomField>
    <fullName>aos_Under_Threat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Threat</label>
    <type>Checkbox</type>
</CustomField>