force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Vehicle_Hit__c.field-meta.xml
<CustomField>
    <fullName>aos_Vehicle_Hit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle Hit</label>
    <type>Checkbox</type>
</CustomField>