force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Wasted__c.field-meta.xml
<CustomField>
    <fullName>aos_Wasted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wasted</label>
    <type>Checkbox</type>
</CustomField>