force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_Weight__c.field-meta.xml
<CustomField>
    <fullName>aos_Weight__c</fullName>
    <label>Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>