force-app/main/default/objects/animalos__Animal_Referral__c/fields/aos_X_Ray_Taken__c.field-meta.xml
<CustomField>
    <fullName>aos_X_Ray_Taken__c</fullName>
    <label>X-Ray Taken</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>